# Study

Криптографические методы защиты информации/: Тема 1. Надежность шифров.md  Тема 2. Теоретическая криптостойкость шифров.md  Тема 3. Практическая криптостойкость шифров.md  Тема 5. Криптография с открытым ключом.md  Тема 7. Криптографические хеш-функции.md  Тема 8. Электронная цифровая подпись. Цифровая подпись.md  Тема. Протоколы распределения ключей.md
Математические методы диагностики компьютерных систем/: ДЗ 1.md  Курсовая работа.md  Практика 1.md  Практика 2. Количественные показатели и модели ремонтопригодности объектов ИС.md  Практика 3. Комплексные показатели надежности объектов ИС.md  Тема 1. Введение. Основные понятия.md  Тема 11. построение оптимизированных условных алгоритмов поиска неисправностей.md  Тема 12. Инженерная методика поиска неисправностей компьютерных систем.md  Тема 2. Количественные показатели и модели безопасности невосстанавливаемых объектов компьютерных систем.md  Тема 4. Долговечность компьютерных систем.md  Тема 5. Количественные показатели и модели ремонтопригодности и сохраняемости объектов компьютерных систем.md  Тема 6. Комплексные показатели надежности объектов компьютерных систем.md  Тема 8. Пути повышения надежности коммпьютерных систем.md
Методы алгебраической геометрии в криптографии/Лабораторная работа 2/: Cargo.toml  run.bat
Методы алгебраической геометрии в криптографии/Лабораторная работа 2/curve25519-dalek2/src/: lib.rs
Электроника и схемотехника/: Тема ....md  Тема 2. Полупроводниковые диоды.md  (+1 more)
(+150 files in other folders)
